# DE-github-tracker-project

./: .gitignore  README.md  docker-compose.yml  ingestion.py  pyproject.toml
dbt/: dbt_project.yml
dbt/models/mart/: fct_commit_activity_daily.sql  fct_commit_trend.sql  fct_contributor_activity.sql  fct_fork_growth_monthly.sql  fct_fork_growth_yearly.sql  fct_star_growth_monthly.sql  fct_star_growth_yearly.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_commit_activity.sql  stg_commit_activity_days.sql  stg_commits.sql  stg_contributors.sql  stg_forks.sql  stg_stargazers.sql
kestra/: github_tracker_flow.yml
terraform/: main.tf  output.tf  variables.tf
