[project]
name = "de-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.5.9",
    "dlt[bigquery,duckdb,postgres,workspace]>=1.24.0",
    "google-cloud-bigquery-storage>=2.36.2",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "streamlit>=1.19.0",
]
